test(checklist): update assertions to use getFirst() for CheckDescription